--- a/tutorials/mix-2/doc/incompressible_elasticity.dox
+++ b/tutorials/mix-2/doc/incompressible_elasticity.dox
@@ -1,4 +1,4 @@
-/*! \page tutorial_contact_problem ADV-1: Contact problem
+/*! \page tutorial_incompressible_elast MIX-2: Mixed  formulation for incompressible elasticity
 
 \note Prerequisites of this tutorial include \ref tutorial_elastic_problem
 
@@ -14,7 +14,9 @@
 
 \tableofcontents
 
-\include contact.cpp
-\include ContactOps.hpp
+
+
+\htmlinclude incompressible_elasticity.html
+
 
 */
