--- a/tutorials/scl-8/doc/jup_radiation.dox
+++ b/tutorials/scl-8/doc/jup_radiation.dox
@@ -1,11 +1,25 @@
-/*! \page jup_radiation_pluto Radiation boundary conditions 
+/*! \page jup_radiation_pluto SCL-8: Radiation boundary conditions 
 
-\section running_pluto_jupyter Running Jupyter notebook
+<!-- 
+ \section running_pluto_jupyter Running Jupyter notebook
+ 
+ First follow instruction here \ref docker_jupyterhub. Then select file in 
+ \em um_views/tutorial/scl-8/pluto.md
+-->
 
-First follow instruction here \ref docker_jupyterhub. Then select file in 
-\em um_views/tutorial/scl-8/pluto.md
+\note Prerequisites of this tutorial include \ref basic_tutorials_poisson_homogeneous
 
-\section theory_pluto Jupyter notebook
+<br>
+
+\note Intended learning outcome:
+- implementation of nonlinear boundary conditions
+- implementation of time stepping
+- implementation nonlineaar problem
+- implementation of axisymmetric problem
+
+\tableofcontents
+
+ <!-- \section theory_pluto Jupyter notebook -->
 
 \htmlinclude jupyter_pluto.html
 
