--- a/mofem/doc/authors_page.dox
+++ b/mofem/doc/authors_page.dox
@@ -14,7 +14,9 @@
   - <a href="https://www.gla.ac.uk/schools/engineering/staff/chrispearce/">Chris Pearce</a>, The University of Glasgow, Scotland, UK 
   - <a href="https://www.gla.ac.uk/schools/engineering/staff/andreishvarts/">Andrei Shvarts</a>, The University of Glasgow, Scotland, UK,
   <a href="https://www.linkedin.com/in/andrei-shvarts/"><i class="fab fa-linkedin-in"></i></a>
-  - <a href="https://www.gla.ac.uk/schools/engineering/staff/andrewmcbride/">Andrew McBride</a>, The University of Glasgow, Scotland, UK 
+  - <a href="https://www.gla.ac.uk/schools/engineering/staff/andrewmcbride/">Andrew McBride</a>, The University of Glasgow, Scotland, UK,
+  - <a href="https://www.gla.ac.uk/schools/engineering/staff/vihargeorgiev/">Vihar Georgiev</a>, The University of Glasgow, Scotland, UK,
+    <a href="https://twitter.com/vihardabest"><i class="fab fa-twitter"></i></a> <a href="https://www.linkedin.com/in/dr-vihar-georgiev/"><i class="fab fa-linkedin-in"></i></a> 
     
 \section mofem_core_developers Core Developers
   - <a href="https://www.gla.ac.uk/schools/engineering/staff/lukaszkaczmarczyk/">Łukasz Kaczmarczyk</a>, The University of Glasgow, Scotland, UK, 
