--- a/mofem/tutorials/scl-1/doc/poisson_homogeneous.dox
+++ b/mofem/tutorials/scl-1/doc/poisson_homogeneous.dox
@@ -1004,7 +1004,7 @@ will do the following steps
 - Third, in the terminal, run commands to partition the input mesh and start
   the analysis
   \code
-  mofem_part -my_file square.h5m -output_file square_2parts.h5m -my_nparts 2 -dim 2 -adj_dim 1
+  mofem_part -my_file square.cub -output_file square_2parts.h5m -my_nparts 2 -dim 2 -adj_dim 1
   mpirun -np 2 ./poisson_2d_homogeneous -file_name square_2parts.h5m -order 4
   \endcode
   where the mesh of a square plate is partitioned into two parts and then the
