--- a/mofem/doc/references.bib
+++ b/mofem/doc/references.bib
@@ -617,6 +617,17 @@ note = {Report}
   year={2010}
 }
 
+@article{gopalakrishnan2012second,
+  title={A second elasticity element using the matrix bubble},
+  author={Gopalakrishnan, Jayadeep and Guzm{\'a}n, Johnny},
+  journal={IMA Journal of Numerical Analysis},
+  volume={32},
+  number={1},
+  pages={352--372},
+  year={2012},
+  publisher={OUP}
+}
+
 @article{fisher1937wave,
   title={The wave of advance of advantageous genes},
   author={Fisher, Ronald Aylmer},
